--- a/package.json
+++ b/package.json
@@ -9,23 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@thatopen/components": "^3.1.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@thatopen/components": "3.1.3",
+    "@thatopen/components-front": "3.1.7",
     "@thatopen/ui": "^2.4.5",
     "axios": "^1.12.0",
     "next": "15.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "stats.js": "^0.17.0",
-    "three": "^0.178.0"
+    "three": "^0.178.0",
+    "web-ifc": "0.0.71"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@thatopen/fragments": "^3.1.6",
+    "@thatopen/fragments": "3.1.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/stats.js": "^0.17.4",
+    "@types/three": "^0.180.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4",
