--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "stats.js": "^0.17.0",
-    "three": "^0.178.0",
+    "three": "^0.175.0",
     "web-ifc": "^0.0.72"
   },
   "devDependencies": {
@@ -31,7 +31,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/stats.js": "^0.17.4",
-    "@types/three": "^0.180.0",
+    "@types/three": ">=0.175.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4",
