--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-icons": "^1.3.2",
-    "@thatopen/components": "^3.2.6",
-    "@thatopen/components-front": "^3.2.14",
-    "@thatopen/ui": "^3.2.0",
-    "@thatopen/ui-obc": "^3.2.2",
+    "@thatopen/components": "~3.3.0",
+    "@thatopen/components-front": "~3.3.0",
+    "@thatopen/ui": "~3.3.0",
+    "@thatopen/ui-obc": "3.3.1",
     "axios": "^1.12.0",
     "next": "15.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "stats.js": "^0.17.0",
     "three": "^0.175.0",
-    "web-ifc": "^0.0.72"
+    "web-ifc": "0.0.74"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@thatopen/fragments": "^3.2.11",
+    "@thatopen/fragments": "~3.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
