--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-icons": "^1.3.2",
-    "@thatopen/components": "~3.3.0",
+    "@thatopen/components": "^3.3.1",
     "@thatopen/components-front": "~3.3.0",
     "@thatopen/ui": "~3.3.0",
     "@thatopen/ui-obc": "3.3.1",
@@ -23,17 +23,20 @@
     "three": "^0.175.0",
     "web-ifc": "0.0.74"
   },
+  "overrides": {
+    "fast-xml-parser": "5.3.4"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@thatopen/fragments": "~3.3.0",
+    "@thatopen/fragments": "^3.3.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/stats.js": "^0.17.4",
     "@types/three": ">=0.175.0",
     "eslint": "^9",
-    "eslint-config-next": "15.3.5",
+    "eslint-config-next": "16.1.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
